--- a/app/code/Eduweb/XmlMerging/composer.json
+++ b/app/code/Eduweb/XmlMerging/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "eduweb/modulea",
+  "name": "eduweb/xml-merging",
   "version": "1.0.0",
   "description": "N/A",
   "type": "magento2-module",
@@ -14,7 +14,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "Eduweb\\ModuleA\\": ""
+      "Eduweb\\XmlMerging\\": ""
     }
   }
 }
