--- a/app/code/Eduweb/Brand/composer.json
+++ b/app/code/Eduweb/Brand/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "eduweb/xml-extender",
+  "name": "eduweb/brand",
   "version": "1.0.0",
   "description": "N/A",
   "type": "magento2-module",
@@ -14,7 +14,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "Eduweb\\XmlExtender\\": ""
+      "Eduweb\\Brand\\": ""
     }
   }
 }
